# aegis-mm

./: .gitignore  ARCHITECTURE.md  README.md
backend/: pyproject.toml  requirements.txt
backend/src/: __init__.py
backend/src/api/: __init__.py  routes.py  schemas.py  server.py  websockets.py
backend/src/audio/: __init__.py  spectral_features.py  spectral_net.py
backend/src/benchmarks/: __init__.py  load_tester.py  run_eval.py
backend/src/core/: __init__.py  config.py  telemetry.py
backend/src/data/: __init__.py  loader.py  synthetic_stream.py
backend/src/engine/: __init__.py  batching_scheduler.py  ring_buffer.py  stream_pipeline.py
backend/src/fusion/: __init__.py  cross_attention.py  multimodal_guardrail.py
backend/src/optimization/: __init__.py  bench_tradeoff.py  quantization.py
backend/src/peft/: __init__.py  cognitive_alignment.py  lora_layer.py
backend/src/vision/: __init__.py  attention_net.py  backbone.py  gaze_net.py
backend/tests/: __init__.py  test_api.py  test_audio.py  test_benchmarks.py  test_data.py  test_engine.py  test_fusion.py  test_optimization.py  test_peft.py  test_vision.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/hooks/: useAegisBackend.ts
frontend/src/routes/: __root.tsx  index.tsx
